--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div class="content">
     <div class="carousel-window">
       <div class="carousel-title-bar">
-        <span>recent_work.exe</span>
+        <span>our_clients.exe</span>
         <div class="buttons">
           <div></div><div></div><div></div>
         </div>
