--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>Untitled</title>
+  <link rel="stylesheet" href="./style.css">
+</head>
+<body>
+<!-- partial:index.partial.html -->
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Carousel Widget</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap">
- 
 </head>
 <body>
   <div class="content">
@@ -27,7 +35,7 @@
 </body>
 </html>
 <!-- partial -->
-  <script  src="./script.js"></script>
-
+<script src="./script.js"></script>
 </body>
 </html>
+
