--- a/index.html
+++ b/index.html
@@ -15,14 +15,21 @@
           <div></div><div></div><div></div>
         </div>
       </div>
-      <div class="carousel">
-        <button class="nav left">&#9664;</button>
-        <img id="carousel-image" src="https://via.placeholder.com/300x300?text=Image+1" alt="Carousel Image">
-        <button class="nav right">&#9654;</button>
+      <div class="carousel" role="region" aria-label="Image carousel">
+        <button class="nav left" aria-label="Previous image">&#9664;</button>
+        <img
+          id="carousel-image"
+          src="https://via.placeholder.com/300x300?text=Image+1"
+          alt="Image 1: Placeholder graphic"
+          aria-live="polite"
+        >
+        <button class="nav right" aria-label="Next image">&#9654;</button>
       </div>
     </div>
   </div>
   <script src="./script.js"></script>
 </body>
 </html>
+
+
 
